--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/exane/urn-probability-calculator#readme",
   "devDependencies": {
     "babelify": "^6.1.3",
+    "backbone": "^1.2.1",
     "browserify": "^10.2.6",
+    "classnames": "^2.1.3",
     "codemirror": "^5.4.0",
     "gulp": "^3.9.0",
     "gulp-livereload": "^3.8.0",
@@ -26,6 +28,7 @@
     "jquery": "^2.1.4",
     "js-beautify": "^1.5.10",
     "react": "^0.13.3",
+    "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0"
   }
 }
